name:                cf-haskell-demo
version:             0.0.1
synopsis:            Demo of Haskell on Cloud Foundry
license:             MIT
author:              Kenji Doi
maintainer:          knjcode@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable cf-haskell-demo
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base
                     , scotty
